[package]
name = "rs-dsa"
version = "0.1.0"
authors = ["Gavin Gong <kefengong@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



[[bin]]
name = "0283"
path = "src/0283.rs"

[[bin]]
name = "0001"
path = "src/0001.rs"

[[bin]]
name = "0007"
path = "src/0007.rs"

[[bin]]
name = "0451"
path = "src/0451.rs"